0.25    23 September 2003
        Applied recent changes fix to front page feed as well.
        Search box now searches categories and locales as well as title and
          body - so for example a search on "holborn & pubs" will DTRT.

0.24    8 September 2003
        Fix to recent changes so minor changes don't mask major ones.
        Fixed supersearch.cgi to use a template instead of CGI.pm to avoid
          weird errors, also turned it into a module and added tests.
        Strip whitespace from OS co-ords before storing in database.

0.23    4 August 2003
        Removed the "POST_CHOMP" option as it was messing up textareas, added
        a test to make sure this doesn't reoccur.

0.22    4 August 2003
        Fixed bug with usernames containing spaces in recent changes/userstats.

        Try out create_makefile_pl => "passthrough" in Build.PL

        Minor fixes to tests to make them work with newest UseMod formatter.

	Prevented "Edit this page" from showing up on category indexes.

	Set TT "POST_CHOMP" option to strip unnecessary newlines from HTML.

        Fixed CPAN bug #3085 - quotes in change summary box.

        Added openguides_version template variable and added it to page
        footer (CPAN request 3110).

0.21    17 July 2003
        We no longer autogenerate a Makefile.PL, since it doesn't pick up
        all the questions that need to be asked.  Sorry.  Use Module::Build
        as detailed in INSTALL, since you won't be able to get the right
        version of Text::WikiFormat installed without it in any case.

        Added version number to CGI.pm prereq as Alex McLintock hit a
        version that didn't have unescape.

        Added a link on RecentChanges to the RSS version, and put an
        autodiscovery tag for the RSS in the head section.

	Changed diff feature to hide checksums, which aren't necessary for 
        the user to see. Fixed a minor bug in the node history template so