@@ -193,8 +193,8 @@ my $build = OpenGuides::Build->new(
 	'CGI' => '2.76', # unescape not in early versions, picked random
 	'CGI::Carp' => 0,
 	'CGI::Cookie' => 0,
-	'CGI::Wiki' => '0.47',
-	'CGI::Wiki::Formatter::UseMod' => '0.07', # for nested lists and bugfix
+	'CGI::Wiki' => '0.49',
+	'CGI::Wiki::Formatter::UseMod' => '0.09',
         'CGI::Wiki::Plugin::Categoriser' => 0,
 	'CGI::Wiki::Plugin::GeoCache' => 0,
 	'CGI::Wiki::Plugin::Locator::UK' => '0.06',
