@@ -5,8 +5,8 @@ Algorithm::Diff (version 0.13 or later)
 CGI (version 2.76 or later)
 CGI::Carp
 CGI::Cookie
-CGI::Wiki (version 0.47 or later)
-CGI::Wiki::Formatter::UseMod (version 0.07 or later)
+CGI::Wiki (version 0.49 or later)
+CGI::Wiki::Formatter::UseMod (version 0.09 or later)
 CGI::Wiki::Plugin::Categoriser
 CGI::Wiki::Plugin::GeoCache
 CGI::Wiki::Plugin::Locator::UK (version 0.06 or later)
